--- a/recursion.html
+++ b/recursion.html
@@ -33,7 +33,7 @@
           것입니다. </p>
         <p>여러분이 아직 재귀가 무엇인지 알지 못했다면, 이 문장을 다시 읽어보시기 바랍니다. 하하! 농담입니다! 재귀는
           사실 함수 내부에서 자기 자신을 호출하도록 정의하는 하나의 방법입니다. 수학에서의 정의는 보통 재귀적으로
-          주어집니다. 예를들어, 피보나치 수열이 재귀적으로 정의되었습니다. 저희는 먼저 두 피보나치 수를 재귀적이지 않게
+          주어집니다. 예를들어, 피보나치 수열이 재귀적으로 정의되었습니다. 우리는 먼저 두 피보나치 수를 재귀적이지 않게
           정의해야 합니다. 0번째와 1번째의 피보나치 수 각각이 0과 1이라는 것을 의미하는 <i>F(0) = 0</i>과
           <i>F(1) = 1</i><span style="font-style: italic;"></span>라 합시다.
           그런 다음 다른 자연수의 피보나치 숫자는 이전 두 피보나치 수의 합이라고 합니다. 따라서 <i>F(n) =
@@ -174,13 +174,19 @@ repeat' x = x:repeat' x
 
 
 
+
+
             3</span>을 호출하는 것은 <span class="fixed">3:repeat 3</span>, <span
             class="fixed">3:(3:repeat 3)</span>, <span class="fixed">3:(3:(3:repeat
+
+
 
 
             3))</span> 등등을 평가한 것과 같습니다. <span class="fixed">repeat 3</span>은
           평가를 멈추지 않지만, <span class="fixed">take 5 (repeat 3)</span>은 3이
           5개가 들어있는 리스트를 줄 것입니다. 따라서 이것은 본질적으로 <span class="fixed">replicate
+
+
 
 
             5 3</span>이 하는 일과 같습니다.</p>
@@ -227,14 +233,11 @@ elem' a (x:xs)
           비어있는 리스트입니다. 비어있는 리스트를 정렬하면 빈 리스트가 됩니다. 다음으로 주 알고리즘이 나옵니다: <em>정
             렬된 리스트는, head보다 작거나 같은 값들로 구성된 </em>'<em>정렬된</em>'<em>리스트가
             head앞에오고, head뒤로는 head보다 큰 값들로 구성된 </em>'<em>정렬된</em>'<em>리
-            스트가 오는 리스트입니다.</em> 정의에서 '정렬된' 이라고 두번 언급한 것을 주목하셨다면, 재귀 호출을
-          두번 해야만 한다는 것을 알 것입니다! 또한&nbsp; ~한다음, ~한다라고 말하는 대신 ~는 ~이다, Also
-          notice that we defined it using the verb <i>is</i> to define
-          the algorithm instead of saying <i>do this, do that, then do
-            that ...</i>. 이게 바로 함수형 프로그래밍의 아름다움입니다! How are we going to
-          filter the list so that we get only the elements smaller than
-          the head of our list and only elements that are bigger? 리스트
-          이해(List comprehensions). 그럼, 한번 이 함수를 파해치고 정의해 봅시다.</p>
+            스트가 오는 리스트이다.</em> 정의에서 '정렬된' 이라고 두번 언급한 것을 주목하셨다면, 재귀 호출을
+          두번 해야만 한다는 것을 알 것입니다! 또한 알고리즘 정의에 있어 '~하고, ~한다'라고 말하는 대신 '~는
+          ~이다' 라고 한 것에 주목하시기 바랍니다. 이게 바로 함수형 프로그래밍의 아름다움입니다! 그러면 어떻게
+          head보다 크거나 작은 요소들을 걸러낼까요? 바로 리스트 이해(List comprehensions)입니다.
+          그럼, 한번 이 함수를 파해치고 정의해 봅시다.</p>
         <pre name="code" class="haskell:hs">quicksort :: (Ord a) =&gt; [a] -&gt; [a]
 quicksort [] = []
 quicksort (x:xs) = 
@@ -242,48 +245,40 @@ quicksort (x:xs) =
         biggerSorted = quicksort [a | a &lt;- xs, a &gt; x]
     in  smallerSorted ++ [x] ++ biggerSorted
 </pre>
-        <p>Let's give it a small test run to see if it appears to behave
-          correctly.</p>
+        <p>간단한 테스트를 돌려봐서 올바르게 동작하는지 살펴봅시다.</p>
         <pre name="code" class="haskell:ghci">ghci&gt; quicksort [10,2,5,3,1,6,7,4,2,3,4,8,9]
 [1,2,2,3,3,4,4,5,6,7,8,9,10]
 ghci&gt; quicksort "the quick brown fox jumps over the lazy dog"
 "        abcdeeefghhijklmnoooopqrrsttuuvwxyz"
 </pre>
-        <p>어! That's what I'm talking about! So if we have, say <span class="fixed">[5,1,9,4,6,7,3]</span>
-          and we want to sort it, this algorithm will first take the
-          head, which is <span class="fixed">5</span> and then put it
-          in the middle of two lists that are smaller and bigger than
-          it. So at one point, you'll have <span class="fixed">[1,4,3]
-            ++ [5] ++ [9,6,7]</span>. We know that once the list is
-          sorted completely, the number <span class="fixed">5</span>
-          will stay in the fourth place since there are 3 numbers lower
-          than it and 3 numbers higher than it. Now, if we sort <span class="fixed">[1,4,3]</span>
-          and <span class="fixed">[9,6,7]</span>, we have a sorted
-          list! We sort the two lists using the same function.
-          Eventually, we'll break it up so much that we reach empty
-          lists and an empty list is already sorted in a way, by virtue
-          of being empty. Here's an illustration:</p>
+        <p>예! 이게 바로 제가 말한 것입니다! So if we have, say <span class="fixed">[5,1,9,4,6,7,3]</span>
+          를 정렬하기 원한다면, 이 알고리즘은 <span class="fixed">5</span>인 head를 취해
+          이보다 큰 리스트와 작은 리스트 중간에 껴놓을 것입니다. 어느 지점에서, 여러분은 <span class="fixed">[1,4,3]
+
+            ++ [5] ++ [9,6,7]</span>를 얻게 될 것입니다. 일단 리스트가 정렬이 되면,&nbsp;
+          3개의 숫자가 이보다 작고, 3개의 숫자가 이보다 크므로 <span class="fixed">5</span>
+          는 4번째 위치에 머무를 것입니다. 이제, 저희는&nbsp; <span class="fixed">[1,4,3]</span>
+          와 <span class="fixed">[9,6,7]</span> 를 정렬할 것입니다! 이 두 리스트를 동일한
+          함수를 이용하여 정렬할 것입니다. 결국, 비어있는 리스트에 도달해서야 멈출 것입니다. 여기 도해가 나와
+          있습니다:</p>
         <img src="http://s3.amazonaws.com/lyah/quicksort.png" alt="quicksort"
           class="center" height="332" width="799">
-        <p>An element that is in place and won't move anymore is
-          represented in <span style="color: rgb(255, 102, 0); font-weight: bold;">orange</span>.
-          If you read them from left to right, you'll see the sorted
-          list. Although we chose to compare all the elements to the
-          heads, we could have used any element to compare against. In
-          quicksort, an element that you compare against is called a
-          pivot. They're in <span style="color: rgb(0, 153, 0); font-weight: bold;">green</span>
-          here. We chose the head because it's easy to get by pattern
-          matching. The elements that are smaller than the pivot are <span
-            style="color: rgb(0, 255, 0); font-weight: bold;">light
-            green</span> and elements larger than the pivot are <span style="color: rgb(0, 51, 0); font-weight: bold;">dark
+        <p><span style="color: rgb(255, 102, 0); font-weight: bold;">orange</span>
+          색으로 표시된 것은 움직이지 않습니다. 표시된 것을 왼쪽에서 오른쪽으로 읽으면, 정렬된 리스트를 확인할 수
+          있습니다. 요소들과 비교하기 위해 head를 선택했지만, 다른 것을 사용할 수 도 있습니다.
+          quicksort에선, 비교되는 원소를 피봇(중심점, pivot)이라 부릅니다. 여기서 <span style="color: rgb(0, 153, 0); font-weight: bold;">green</span>
+          색으로 된 것입니다. head를 선택한 이유는 패턴 매칭으로 얻기 쉽기 때문입니다. pivot 보다 작은 원소는
+          <span style="color: rgb(0, 255, 0); font-weight: bold;">light
+            green</span> 색이며, piviot보다 큰 것은 <span style="color: rgb(0, 51, 0); font-weight: bold;">dark
 
 
 
 
 
 
-            green</span>. The yellowish gradient thing represents an
-          application of quicksort.</p>
+
+
+            green</span> 색입니다. 누런색으로 표시된 것은 quicksort가 작동하는 것을 나타냅니다.</p>
         <a name="thinking-recursively"></a>
         <h2>재귀적으로 생각하기</h2>
         <p>상당히 많은 수의 재귀를 하면서, 여러분이 느끼셨다시피 여기엔 패턴이 존재합니다. 보통 주변상황을 정의하고
