--- a/recursion.html
+++ b/recursion.html
@@ -175,9 +175,11 @@ repeat' x = x:repeat' x
 
 
 
+
             3))</span> 등등을 평가한 것과 같습니다. <span class="fixed">repeat 3</span>은
           평가를 멈추지 않지만, <span class="fixed">take 5 (repeat 3)</span>은 3이
           5개가 들어있는 리스트를 돌려 줄 것입니다. 따라서 이것은 본질적으로 <span class="fixed">replicate
+
 
 
 
@@ -247,6 +249,7 @@ ghci&gt; quicksort "the quick brown fox jumps over the lazy dog"
           를 정렬하기 원한다면, 이 알고리즘은 <span class="fixed">5</span>인 head를 취해
           이보다 큰 리스트와 작은 리스트 중간에 껴놓을 것입니다. 어느 지점에서, 여러분은 <span class="fixed">[1,4,3]
 
+
             ++ [5] ++ [9,6,7]</span>를 얻게 될 것입니다. 일단 리스트가 정렬이 되면,&nbsp;
           3개의 숫자가 이보다 작고, 3개의 숫자가 이보다 크므로 <span class="fixed">5</span>
           는 4번째 위치에 머무를 것입니다. 이제, 저희는&nbsp; <span class="fixed">[1,4,3]</span>
@@ -270,6 +273,7 @@ ghci&gt; quicksort "the quick brown fox jumps over the lazy dog"
 
 
 
+
             green</span> 색입니다. 누런색으로 표시된 것은 quicksort가 작동하는 것을 나타냅니다.</p>
         <a name="thinking-recursively"></a>
         <h2>재귀적으로 생각하기</h2>
@@ -283,20 +287,17 @@ ghci&gt; quicksort "the quick brown fox jumps over the lazy dog"
         <p>물론, 이것들도 주변 조건을 지닙니다. 주변 조건은 보통 재귀를 만족하지 못하는 상황을 나타냅니다. 리스트를
           다룰때, 주변 조건은 주로 빈 리스트입니다. 트리를 다룬다면, 주변 조건은 보통 자식을 지니지 않는 노드일
           것입니다.</p>
-        <p>숫자를 재귀적으로 다룰때도 마찬가지 입니다. Usually it has to do with some
-          number and the function applied to that number modified. We
-          did the factorial function earlier and it's the product of a
-          number and the factorial of that number minus one. 이와 같은 재귀과정은
-          양수에 대해서만 계승(factorial)이 정의되었기에, 0일때는 맞지 않습니다. 주변 조건은 종종 항등원이
-          되기도 합니다. 무언가에 1을 곱하면 그대로 돌려받기에 곱셈의 항등원은 1입니다. 또한 리스트를 합할때,
-          비더있는 리스트를 0으로 정의했으므로, 0이 덧셈의 항등윈입니다. quicksort에선, 주변 조건은 비어있는
-          리스트이며, 어떠한 리스트에 빈 리스트를 더한다면, 원래 리스트를 얻기에 항등원 또한 빈 리스트 입니다.</p>
-        <p>따라서 문제를 해결하기 위해 재귀적인 방법을 생각할 시에는, 재귀적인 해결책이 적용되지 않는 경우와 try
-          to think of when a recursive solution doesn't apply and see if
-          you can use that as an edge case, think about identities and
-          think about whether you'll break apart the parameters of the
-          function (예를들어, 리스트는 보통 패턴매칭을 통해 head와 tail로 나누어 집니다.) and on
-          which part you'll use the recursive call.</p>
+        <p>숫자를 재귀적으로 다룰때도 마찬가지 입니다. 보통 어느 숫자와 그 숫자가 바뀌어 호출된 함수로 이를 행합니다.
+          이전 팩토리얼 함수에도 어느 수와 그 숫자에서 1을 뺀 팩토리얼의 곱으로 그러한 일을 했습니다. 이와 같은
+          재귀과정은 양수에 대해서만 계승(factorial)이 정의되었기에, 0일때는 맞지 않습니다. 주변 조건은 종종
+          항등원이 되기도 합니다. 무언가에 1을 곱하면 그대로 돌려받기에 곱셈의 항등원은 1입니다. 또한 리스트를
+          합할때, 비더있는 리스트를 0으로 정의했으므로, 0이 덧셈의 항등윈입니다. quicksort에선, 주변 조건은
+          비어있는 리스트이며, 어떠한 리스트에 빈 리스트를 더한다면, 원래 리스트를 얻기에 항등원 또한 빈 리스트
+          입니다.</p>
+        <p>따라서 문제를 해결하기 위해 재귀적인 방법을 생각할 시에는, 재귀적인 해결책이 적용되지 않는 경우와 주변
+          조건으로 사용할 수 있는지를 확인하며, 항등원에 대해 생각을, 함수의 매개변수를 나눌 것인지(예를들어, 리스트는
+          보통 패턴매칭을 통해 head와 tail로 나누어 집니다.), 재귀호출을 할 부분이 어디인지를 염두해 둬야
+          합니다.</p>
         <div class="footdiv">
           <ul>
             <li style="text-align: left;"> <a href="syntax-in-functions"
